--- a/styles/styles.css.scss
+++ b/styles/styles.css.scss
@@ -128,6 +128,12 @@ $background-blue: #2B78E4;
 		padding-bottom: 30px;
 	}
 
+	.contact-info-table {
+		td:nth-child(even) {
+			padding-left: 50px;
+		}
+	}
+
 	td {
 		padding-top: 20px;
 	}
